Change FileParser interface to accept ForwardRelativePath
Summary:
Now it accepts `foo/bar/BUCK` instead of `/project/root/foo/bar/BUCK`.

Again, to avoid issues with:
* any of paths not being normalized
* path provided for a `BUCK` file of another cell

This is important for the following diff D29084880 which makes similar change in the `GlobberFactory`.

Reviewed By: mykola-semko

fbshipit-source-id: ecc2045cba5f122c21f86b048ed6c6a55f020572